# RAG-Eval-Frameworks

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  QUERY_COMPARSION.MD  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
dashboard/: app.py
dashboard/demo_data/: benchmark_results.json  ragas_scores.jsonl
data/dataset/: eval_dataset.json  generated_answers.csv
data/results/: evaluation_results.json  final_report.json
docs/: deploy-hf-space.md
experiments/: Transformer_Architecture.md  docling_spike.ipynb  pipeline_validation.ipynb
experiments/experiments/data/: benchmark_results.json
notebooks/: experiment_registry.csv  ragas_eval.ipynb
notebooks/EXP01/: exp01_recursive1000_overlap200_rank_distribution.csv  exp01_recursive1000_overlap200_summary.csv  exp01_recursive1000_overlap200_vector_bm25_detailed.csv  report.md
notebooks/EXP02/: pipeline-rebuild.ipynb
notebooks/EXP02/results/: chunk_audit.csv  chunk_statistics.csv  report.md
raglens/: __init__.py  cli.py  pipeline.py
raglens/cache/: __init__.py  chunk_cache.py  parser_cache.py
raglens/chunking/: __init__.py  section_chunker.py
raglens/config/: __init__.py  retrieval_config.py
raglens/embedding/: __init__.py  embedding_generator.py  providers.py
raglens/evaluation/: __init__.py  benchmark_runner.py  benchmark_visualizer.py  hierarchical_retrieval_evaluator.py  neighbor_hierarchical_retrieval_evaluator.py  retrieval_evaluator.py
raglens/llm/: __init__.py  base.py  providers.py
raglens/models/: __init__.py  chunk_embedding.py  document.py  equation.py  flattened_section.py  hierarchical_retrieval_result.py  neighbor_retrieval_result.py  ragas_sample.py  retrieval_result.py  section.py
raglens/normalization/: __init__.py  section_flattener.py
raglens/parsers/: __init__.py  docling_parser.py  hierarchy_builder.py  level_inference.py  markdown_section_parser.py
raglens/preprocessing/: __init__.py
raglens/question_generation/: question_cache.py  question_dataset_builder.py  question_dataset_loader.py  question_generator.py
raglens/ragas/: __init__.py  answer_cache.py  answer_dataset_builder.py  answer_generator.py  evaluation_dataset_builder.py  fast_context_precision.py  judge.py  ragas_dataset_loader.py  ragas_scorer.py  ragas_visualizer.py  sampling.py
raglens/retrieval/: __init__.py
raglens/retrieval/base/: base_retriever.py
raglens/retrieval/bm25/: bm25_retriever.py
raglens/retrieval/dense/: __init__.py  (+1 more)
raglens/validation/: __init__.py
raglens/vectorstore/: chroma_store.py
src/: dataset_generator.py  evaluate.py  ingestion.py  rag_pipeline.py  ragas_eval.py  ragas_testset_gen.py  report_generator.py  retriever.py  vector_store.py
src/metrics/: llm_judge.py  semantic_similarity.py
src/sources/: arxiv_source.py  wiki_source.py
src_v2/cache/: __init__.py  parser_cache.py
src_v2/chunking/: __init__.py  section_chunker.py  structure_preserver.py
src_v2/config/: retrieval_config.py
src_v2/embedding/: __init__.py  embedding_model.py  ollama_embedding_generator.py
src_v2/evaluation/: __init__.py  retrieval_evaluator.py  retrieval_metrics.py
src_v2/generators/: question_generator.py
src_v2/models/: __init__.py  chunk.py  chunk_embedding.py  document.py  hierarchical_retrieval_result.py  neighbor_retrieval_result.py  question_sample.py  retrieval_result.py  section.py  table.py
src_v2/normalization/: section_flattener.py
src_v2/parsers/: docling_parser.py  hierarchy_builder.py  level_inference.py  markdown_section_parser.py
src_v2/preprocessing/: formula_cleaner.py
src_v2/question_generation/: __init__.py  question_cache.py  question_dataset_builder.py  question_dataset_loader.py  question_generator.py
src_v2/retrieval/: __init__.py
src_v2/validation/: chunk_auditor.py
src_v2/vectorstore/: chroma_store.py
tests/: test_bm25_retriever.py  test_ragas_scorer.py  test_reranked_retriever.py  test_retrieval_config.py  test_retrieval_metrics.py  test_sampling.py
(+22 files in other folders)
