[project]
name = "rag-evaluation-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=4.0.0",
    "chromadb>=1.5.9",
    "langchain>=1.3.4",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pypdf>=6.12.2",
    "streamlit>=1.58.0",
    "tqdm>=4.67.3",
    "wikipedia-api>=0.15.0",
]
