[project]
name = "rag-evaluation-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=4.0.0",
    "chromadb>=1.5.9",
    "ipykernel>=7.2.0",
    "langchain<1.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-google-vertexai>=3.2.3",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "matplotlib>=3.10.9",
    "notebook>=7.5.7",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "pandas>=3.0.3",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.14.5",
    "streamlit>=1.58.0",
    "tqdm>=4.67.3",
    "wikipedia-api>=0.15.0",
]
