[project]
name = "raglens-toolkit"
version = "0.1.0"
description = "A provider-agnostic toolkit for benchmarking retrieval strategies and running RAGAS end-to-end evaluation against your own PDF corpus."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Arun Kumar Pandey" }]
keywords = ["rag", "retrieval-augmented-generation", "ragas", "llm-evaluation", "retrieval-benchmarking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Base deps: only what the dashboard (raglens.evaluation, raglens.ragas) and
# `raglens report` need -- a lean `pip install raglens-toolkit` works for
# those without pulling in Docling/ChromaDB/Ollama. The full ingest -> index
# -> question-generation -> benchmark -> evaluate pipeline needs `[full]`.
dependencies = [
    "groq>=0.37.1",
    "langchain-community>=0.4.1,<0.4.2", # ragas==0.4.3 imports langchain_community.chat_models.vertexai, removed in 0.4.2
    "langchain-openai>=1.2.2",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "streamlit>=1.58.0",
    "typer>=0.15.0",
]

[project.urls]
Repository = "https://github.com/officialarun/RAG-Eval-Frameworks"
Homepage = "https://github.com/officialarun/RAG-Eval-Frameworks"

[project.scripts]
raglens = "raglens.cli:app"

[project.optional-dependencies]
full = [
    "arxiv>=4.0.0",
    "chromadb>=1.5.9",
    "docling>=2.99.0",
    "ipykernel>=7.2.0",
    "langchain<1.0",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "mediawikiapi>=1.3",
    "notebook>=7.5.7",
    "pylatexenc>=2.10",
    "pypdf>=6.12.2",
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.14.5",
    "sentence-transformers>=3.0.0",
    "tqdm>=4.67.3",
    "wikipedia-api>=0.15.0",
]
dev = [
    "build>=1.2.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["raglens*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# mediawikiapi (legacy V1 dependency, src/) pulls in pytest-vcr, which
# conflicts with pytest-recording pulled in elsewhere; disable the unused one.
addopts = "-p no:vcr"

[tool.ruff.lint.per-file-ignores]
# __init__.py files intentionally re-export names for their package's public API.
"**/__init__.py" = ["F401"]
